--- a/Index/Styles/component.css
+++ b/Index/Styles/component.css
@@ -22,6 +22,7 @@ nav a {
 	font-weight: 400;
 	text-shadow: 0 0 1px rgba(255,255,255,0.3);
 	font-size: 1.35em;
+  display: none;
 }
 
 nav a:hover,
