--- a/Index/Styles/slicknav.css
+++ b/Index/Styles/slicknav.css
@@ -10,6 +10,7 @@
 	padding: 0.438em 0.625em 0.438em 0.625em;
 	line-height: 1.125em;
 	cursor: pointer;
+
 }
 .slicknav_menu .slicknav_menutxt {
 	display: block;
@@ -26,7 +27,7 @@
 .slicknav_menu .slicknav_icon-bar {
 	display: block;
 	width: 1.125em;
-	height: 0.125em;
+	height: 0.145em;
 	-webkit-border-radius: 1px;
 	-moz-border-radius: 1px;
 	border-radius: 1px;
@@ -86,6 +87,7 @@
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 	background-color: #222222;
+	border: 2px solid yellow;
 }
 /* Button Text */
 .slicknav_menu .slicknav_menutxt {
@@ -99,7 +101,8 @@
 }
 .slicknav_menu {
 	background: #4c4c4c;
-	padding: 5px;
+	padding: 4px;
+
 }
 .slicknav_nav {
 	color: #fff;
